[gd_scene load_steps=25 format=3 uid="uid://bnlcs4ivfbsss"]

[ext_resource type="Script" path="res://scenes/world/enemy.gd" id="1_kmulg"]
[ext_resource type="SpriteFrames" uid="uid://bp531pjampdkk" path="res://assets/critter_3.tres" id="2_6fy8k"]
[ext_resource type="PackedScene" uid="uid://b07rljcn3rxmd" path="res://components/interaction/2D/interactables/hurtbox_2d.tscn" id="3_kee52"]
[ext_resource type="PackedScene" uid="uid://dvvoyxs6gfhne" path="res://components/interaction/2D/interactables/hitbox_2d.tscn" id="4_fm4td"]
[ext_resource type="FontFile" uid="uid://do03fwxb30r7l" path="res://assets/GUI/OldSchoolAdventures-42j9.ttf" id="5_mt6y6"]
[ext_resource type="AudioStream" uid="uid://b17xuikgm18at" path="res://assets/audio/hit-flesh-01-266311.mp3" id="6_jqxro"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/fsm.gd" id="7_28b7l"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/idle_state.gd" id="8_f06i3"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/roam_state.gd" id="9_g5nay"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/chase_state.gd" id="10_klptc"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/die_state.gd" id="11_rhpuq"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/teleport_state.gd" id="12_hxumb"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/attack_state.gd" id="13_rl56x"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/orbit_state.gd" id="14_susqk"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/states/reposition_state.gd" id="15_e7xq2"]

[sub_resource type="Animation" id="Animation_wasu3"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0rjc8"]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="Animation" id="Animation_20rvb"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0c2a"]
_data = {
"RESET": SubResource("Animation_wasu3"),
"die": SubResource("Animation_0rjc8"),
"run": SubResource("Animation_20rvb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qsxed"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jik4b"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_60q7e"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_ecuri"]
radius = 140.004

[sub_resource type="LabelSettings" id="LabelSettings_ireb8"]
font_size = 7
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="CharacterBody2D" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 4
collision_mask = 135
motion_mode = 1
script = ExtResource("1_kmulg")
hp = 10
experience = 5
knockback_recovery = 4
spawn_type = 3
speed = 45.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -28)
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_6fy8k")
animation = &"run"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e0c2a")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qsxed")

[node name="Hurtbox2D" parent="." instance=ExtResource("3_kee52")]
position = Vector2(1, 11)
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" parent="Hurtbox2D" index="0"]
position = Vector2(-1, -11)
shape = SubResource("CircleShape2D_jik4b")

[node name="DisableTimer" parent="Hurtbox2D" index="1"]
wait_time = 0.5

[node name="Hitbox2D" parent="." instance=ExtResource("4_fm4td")]
position = Vector2(1, 11)
collision_layer = 4
collision_mask = 2
damage = 20

[node name="CollisionShape2D" parent="Hitbox2D" index="0"]
position = Vector2(-1, -11)
shape = SubResource("CircleShape2D_60q7e")

[node name="DamageLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -11.0
offset_top = -29.0
offset_right = 14.0
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("5_mt6y6")
theme_override_font_sizes/font_size = 7
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SFXAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_jqxro")
bus = &"SFX"

[node name="ChaseArea2D" type="Area2D" parent="."]
position = Vector2(1, 11)
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea2D"]
visible = false
position = Vector2(-1, -10)
shape = SubResource("CircleShape2D_ecuri")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("7_28b7l")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("8_f06i3")
anim = NodePath("../../AnimationPlayer")

[node name="RoamState" type="Node" parent="StateMachine"]
script = ExtResource("9_g5nay")

[node name="ChaseState" type="Node" parent="StateMachine"]
script = ExtResource("10_klptc")

[node name="DieState" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim", "sfx_audio", "hurtbox")]
script = ExtResource("11_rhpuq")
FRICTION = 15
anim = NodePath("../../AnimationPlayer")
sfx_audio = NodePath("../../SFXAudioStream")
hurtbox = NodePath("../../Hurtbox2D")

[node name="TeleportState" type="Node" parent="StateMachine"]
script = ExtResource("12_hxumb")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("13_rl56x")

[node name="OrbitState" type="Node" parent="StateMachine"]
script = ExtResource("14_susqk")

[node name="RepositionState" type="Node" parent="StateMachine"]
script = ExtResource("15_e7xq2")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 13)
scale = Vector2(0.5, 0.5)

[node name="StateLabel" type="Label" parent="Node2D"]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_right = 16.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_mt6y6")
theme_override_font_sizes/font_size = 7
text = "state"
label_settings = SubResource("LabelSettings_ireb8")
horizontal_alignment = 1

[connection signal="hurt" from="Hurtbox2D" to="." method="_on_hurtbox_2d_hurt"]
[connection signal="area_entered" from="ChaseArea2D" to="." method="_on_chase_area_2d_area_entered"]
[connection signal="area_exited" from="ChaseArea2D" to="." method="_on_chase_area_2d_area_exited"]
[connection signal="body_entered" from="ChaseArea2D" to="." method="_on_chase_area_2d_body_entered"]
[connection signal="body_exited" from="ChaseArea2D" to="." method="_on_chase_area_2d_body_exited"]

[editable path="Hurtbox2D"]
[editable path="Hitbox2D"]
